# reddit-metrics

./: .gitignore  .pre-commit-config.yaml  Dockerfile.extract  Dockerfile.transform  Makefile  README.md  pyproject.toml  requirements.txt
dockerfiles/: Dockerfile.extract  Dockerfile.load
src/: config.py  extract.py  load.py  models.py  transform.py  utils.py
src/clients/: s3_client.py
src/common/: config.py  models.py  reddit_client.py  s3_client.py  utils.py
terraform/: cloudwatch.tf  ecr.tf  eventbridge.tf  iam.tf  lambda.tf  main.tf  s3.tf  sns.tf  variables.tf
terraform/sns_lambda/: sns_lambda.py
tests/: conftest.py
tests/integration/: test_extract.py  test_transform.py
tests/unit/: test_extract.py  test_transform.py  test_utils.py
