[project]
name = "reddit-metrics"
description = "Visualise aggregated metrics of selected subreddits"
requires-python = ">=3.9"
version = "0.0.1"
dependencies = [
    "boto3~=1.26.157",
    "dataclass-csv~=1.4.0",
]

[project.optional-dependencies]
test = [
    "mypy~=1.4.0",
    "pre-commit~=3.3.3",
    "pytest~=7.3.2",
]

extract = [
    "praw~=7.7.0",
]

transform = [
    "pandas~=2.0.2",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
ignore_missing_imports = true

[tool.black]
line-length = 120
target_version = ['py39']
include = '\.pyi?$'
